# FHIR-MolDef-python

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: AlleleProfileDemo.ipynb  Intro_moldef_to_fhir_translation.ipynb  Intro_to_moleculardefinition.ipynb  Intro_vrs_to_allele_profile_translation.ipynb  Intro_vrs_to_moldef_translation.ipynb  MolecularDefinitionDemo.ipynb  README.md  allele_factor_demo.ipynb  allele_factory_demo.ipynb  allele_profile_demo.ipynb  allele_profile_to_vrs_translation_demo.ipynb  allele_profile_translation.ipynb  full_vrs_trans.ipynb  intro_allele_profile.ipynb  intro_moldef.ipynb  intro_sequence_profile.ipynb  intro_to_moldef_allele_translation.ipynb  molecular_definition_demo.ipynb  sequence_profile_demo.ipynb  test_contained_translation.ipynb  vrs_allele_translation.ipynb  vrs_translation_to_allele_profile_demo.ipynb
notebooks/schema/: allele_profile_demo.ipynb  variation_profile_demo.ipynb
notebooks/translations/: 02_vrs_to_fhir_allele_translation.ipynb  03_fhir_to_vrs_allele_translation.ipynb  04_full_allele_roundtrip_translation.ipynb  allele_builder_demo.ipynb  allele_factory_demo.ipynb  clinvar_demo_translation.ipynb  fhir_allele_translation.ipynb  fhir_variation_translation.ipynb  vrs_allele_translation.ipynb  vrs_fhir_full_translation_demo.ipynb
src/: exception.py
src/api/: seqrepo.py  seqrepo_api.py
src/apis/: seqrepo.py
src/builders/: allele_builder.py
src/conventions/: refseq_identifiers.py
src/exceptions/: fhir.py  utils.py
src/moldefresource/: fhirtypeextra.py  moleculardefinition.py
src/moldeftranslator/: allele_translator.py  allele_utils.py  representation_translator.py
src/normalize/: allele_normalizer.py
src/normalizers/: allele_normalizer.py
src/pipelines/: clinvar_translate.py
src/profiles/: allele.py  alleleprofile.py  genotype.py  profiles.py  sequence.py  sequenceprofile.py  variation.py
src/resource/: fhirtypeextra.py  moleculardefinition.py
src/resources/: __init__.py  moleculardefinition.py
src/translators/: allele_translator.py  allele_utils.py  fhir_system_uris.py  fhir_to_vrs.py  full_base_transaltion_demo.py  representation_translator.py  sequence_expression_translator.py  variation_translator.py  vartiation_translator.py  vrs_fhir_translator.py  vrs_json_pointers.py  vrs_to_fhir.py
src/translators/utils/: allele.py  allele_denormalizer.py  coordinate_systems.py  coordinates.py  refseq.py  representation_translator.py
src/translators/validations/: allele.py
src/utils/: allele_factory.py  allele_profile_factory.py  clinvar_trans.py  demo_mass_translation.ipynb  spdi_expressions_test.csv  var2fhir.py
src/vrs_tools/: hgvs_tools.py  normalizer.py
test/: test_alleleprofile.py  test_alleleprofile_contained_translation.py  test_alleleprofile_translation.py  test_moleculardefinition.py  test_sequenceprofile.py  test_vrs_to_alleleprofile_translation.py
tests/: example_data.py  example_data_annotation.py  example_test_data.py  example_vrs_data.py  full_translation.py  test_alleleprofile.py  test_alleleprofile_translation.py  test_fhir_to_vrs.py  test_sequenceprofile.py  test_vrs_to_alleleprofile_translation.py  test_vrs_to_fhir.py  vrs_full_example.py
tests/translations/: example_test_data.py  test_allele_profile_full_translation.py  test_vrs_allele_full_translation.py
