[project]
name = "FHIR-MolDef-python" 
version = "0.1.0" 
description = "This project provides a Python-based implementation of the HL7 FHIR Molecular Definition standard."
readme = "README.md"
authors = [
    {name = "Robert R. Freimuth"},
    {name = "Salem Bajjali"}
]

license = {file = "LICENSE"}
# Keywords for your project, these are tags that help find your the project. 
keywords = [
    "FHIR",
    "MolecularDefinition",
    "FHIR-python"
]  
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"

dependencies = [
    "click==8.1.7",
    "exceptiongroup==1.2.0",
    "importlib-resources==6.1.1",
    "ipykernel==6.28.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "ga4gh.vrs[extras]==0.8.5",
    "requests==2.32.3",
    "fhir-core==0.1.3",
    "fhir-resources==8.0.0b4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "deepdiff==8.1.1",
    "ruff==0.8.3"
]

[build-system]
requires = ["setuptools>=65.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]