[project]
name = "FHIR-MolDef-python" 
version = "0.1.0" 
description = "This project provides a Python-based implementation of the HL7 FHIR Molecular Definition standard."
readme = "README.md"
authors = [
    {name = "Robert R. Freimuth"},
    {name = "Salem Bajjali"}
]

license = {file = "LICENSE"}
# Keywords for your project, these are tags that help find your the project. 
keywords = [
    "FHIR",
    "MolecularDefinition",
    "FHIR-python"
]  
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"

dependencies = [
    "click==8.1.7",
    "exceptiongroup==1.2.0",
    "importlib-resources==6.1.1",
    "ipykernel==6.28.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "ga4gh.vrs[extras]==0.8.5",
    "requests==2.32.3",
    "fhir-core==1.0.0",
    "fhir-resources==8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "deepdiff==8.1.1",
    "ruff==0.8.3"
]

[build-system]
requires = ["setuptools>=65.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
exclude = ["notebooks","data","edits"]

[tool.ruff.lint]

select = [
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "E", "W",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SIM",  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "D",  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "ARG",  # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "S",  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
   ]

ignore = ["E501"] # Ruff format already handles long lines
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"  # Enforce double quotes
docstring-code-format = true  # Format code inside docstrings